# cs236project

./: Automaton.h  CMakeLists.txt  CommentAutomaton.cpp  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.cpp  Graph.cpp  Graph.h  Header.cpp  Header.h  IdAutomaton.cpp  IdAutomaton.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  MyTuple.cpp  MyTuple.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  QueriesAutomaton.cpp  Relation.cpp  Relation.h  Rule.cpp  Rule.h  RulesAutomaton.cpp  SchemesAutomaton.cpp  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  main.cpp  node.cpp  (+1 more)
Lab2PassOffCases/2-80/: input0.txt
Lab4PassOffCases/4-80/: input7.txt
